# london-bleeds-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MEMORY_SYSTEM_VERIFICATION.md  README.md  pyproject.toml
backend/: alembic.ini
backend/ai/: __init__.py  context_engine.py  logger.py  markdown_utils.py  memory.py  models.py  narrator.py  planner.py  prompts.py  summarizer.py  validators.py
backend/api/: routes_debug.py  routes_debug_turns.py  routes_health.py  routes_memory.py  routes_play.py
backend/app/: config.py  deps.py  main.py  schemas.py
backend/db/: engine.py  ephemeral.py  json_utils.py  models.py  saves.py  schema_types.py  seed.py
backend/migrations/: env.py
backend/migrations/versions/: 18b0f21d98b4_init.py
backend/scripts/: check_integrity.py  demo_memory_test.py  init_db.py  rebuild_all.py  reindex_seed.py  seed_db.py  seed_memory.py  smoke_test.py  test_memory.py  verify_api_key.py  verify_memory_integration.py
backend/seed/: characters.json  items.json  locations.json  lore.json  timeline.json
docs/: characters.json  items.json  locations.json  lore.json  mystery.json  styleguide.md  timeline.json
documentation/: London Bleeds_ A Modern AI-Powered Text Adventure.md  story.md
london-bleeds-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
london-bleeds-ui/src/: App.tsx  index.css
london-bleeds-ui/src/api/: client.ts  gemini.ts
london-bleeds-ui/src/components/: CommandBar.tsx  ContextPanel.tsx  JournalRenderer.tsx  MainContent.tsx  Notification.tsx  SceneView.tsx  (+3 more)
(+5 files in other folders)
